<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID PELANGGAN</string>
    <string name="card_pegawai_id">ID PEGAWAI</string>
    <string name="Nama_Pelanggan">Nama Pelanggan</string>
    <string name="ALAMAT">Alamat</string>
    <string name="No_Hp">No Hp</string>
    <string name="Hubungi">Hubungi</string>
    <string name="Lihat">Lihat</string>
    <string name="Nama_Pegawai">Nama Pegawai</string>
    <string name="Cabang">Cabang</string>
    <string name="Terdaftar">Terdaftar</string>
    <string name="Simpan">Simpan</string>
    <string name="Tambah_Pelanggan">Tambah Pelanggan</string>
    <string name="Tambah_Pegawai">tambah pegawai</string>
    <string name="Nama_Layanan">Nama Layanan</string>
    <string name="Harga">Harga</string>
    <string name="ID_LAYANAN">ID LAYANAN</string>
    <string name="validasi_etNama">Nama tidak boleh kosong</string>
    <string name="validasi_etalamat">Alamat</string>
    <string name="validasi_etnohp">NoHp</string>
    <string name="validasi_etcabang">Cabang</string>
    <string name="errorsimpan">Gagal Menyimpan</string>
    <string name="Validasi_Terrdaftar_Pelanggan">Validasi_Terrdaftar_Pelanggan</string>
    <string name="tambah_pelanggan_sukses">tambah_pelanggan_sukses</string>
    <string name="tambah_pelanggan_gagal">tambah_pelanggan_gagal</string>
    <string name="validasitransaksi1" >validasi transaksi 1</string>
    <string name="validasitransaksi2" >validasitransaksi2</string>
    <string name="validasitransaksi3" >validasi transaksi 3</string>
    <string name="idcabangtakvalid">Id Cabang InValid</string>
    <string name="Datacabangsucceeddelete">Data Cabang Berhasil Dihapus</string>
    <string name="Datacabangkosong">Data Cabang Kosong</string>
    <string name="Selamatpagi">Selamat Pagi</string>
    <string name="SelamatSiang">Selamat Siang</string>
    <string name="SelamatMalam">Selamat Malam</string>
    <string name="layanan_dihapus" >Layanan Dihapus</string>
    <string name="namapelanggan" >Nama Pelanggan</string>
    <string name="batalmemilihpelanggan" >Batal Memilih Pelanggan</string>
    <string name="hargalayanan" >Harga Layanan</string>
    <string name="batalmemilihlayanan" >Batal Memilih Layanan</string>
    <string name="namalayanan">Nama Layanan</string>
</resources>