<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    tools:context="datapegawai">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="#E1EACD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:id="@+id/card2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ></RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai_id"
            android:id="@+id/tvidpegawai"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="#5D8736"
            android:textColor="#181C14"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nama_Pegawai"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvidpelanggan"
            android:layout_marginStart="10dp"
            android:layout_marginTop="45dp"/>
        <TextView
            android:id="@+id/alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ALAMAT"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/nama"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="68dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/nohp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_Hp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/alamat"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="90dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tvterdaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Terdaftar"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/nohp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="110dp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/tvcabang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cabang"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvterdaftar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="130dp"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/hubungi"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Hubungi"
            app:layout_constraintTop_toBottomOf="@+id/hp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="155dp"
            android:backgroundTint="#5D8736"/>

        <Button
            android:id="@+id/lihat"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Lihat"
            app:layout_constraintTop_toBottomOf="@+id/hp"
            app:layout_constraintStart_toEndOf="@+id/hubungi"
            android:backgroundTint="#5D8736"
            android:layout_marginStart="200dp"
            android:layout_marginTop="155dp"/>


    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>