<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    tools:context=".pelanggan.datapelanggan">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ID_LAYANAN"
            android:id="@+id/tvidlayanan"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="#6482AD"
            android:textColor="#181C14"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nama_Layanan"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvidpelanggan"
            android:layout_marginStart="10dp"
            android:layout_marginTop="55dp"/>
        <TextView
            android:id="@+id/alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Harga"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/nama"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="75dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/nohp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cabang"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/alamat"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="95dp"
            android:layout_marginStart="10dp"/>


    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>