<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelanggan.tambahpegawai">

    <TextView
        android:id="@+id/tvtambahpegawai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Tambah_Pegawai"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nama_Pegawai"
        android:layout_marginTop="80dp"
        android:textSize="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:padding="15dp"
        android:hint="@string/Nama_Pegawai"
        android:background="@drawable/radius"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"/>
    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ALAMAT"
        android:layout_marginTop="180dp"
        android:textSize="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1"/>
    <EditText
        android:id="@+id/et2"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:padding="15dp"
        android:hint="@string/ALAMAT"
        android:background="@drawable/radius"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3"/>
    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/No_Hp"
        android:layout_marginTop="280dp"
        android:textSize="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2"/>
    <EditText
        android:id="@+id/et3"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:padding="15dp"
        android:hint="@string/No_Hp"
        android:background="@drawable/radius"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4"/>
    <EditText
        android:id="@+id/et4"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:padding="15dp"
        android:text="@string/Simpan"
        android:background="@drawable/radius"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:backgroundTint="#81BFDA"
        app:layout_constraintTop_toBottomOf="@+id/et5"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cabang"
        android:layout_marginTop="380dp"
        android:textSize="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et4"/>
    <EditText
        android:id="@+id/et5"
        android:layout_width="375dp"
        android:layout_height="55dp"
        android:padding="15dp"
        android:hint="@string/Cabang"
        android:background="@drawable/radius"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv5"/>


</androidx.constraintlayout.widget.ConstraintLayout>